Adiciona view para login

--- a/teleconsultoria/templates/teleconsultoria/login.html
+++ b/teleconsultoria/templates/teleconsultoria/login.html
@@ -15,8 +15,8 @@
                 <input type="text" name="username" id="username">
             </p>
             <p>
-                <label for="senha">Senha</label> <br>
-                <input type="password" name="senha" id="senha">
+                <label for="password">Senha</label> <br>
+                <input type="password" name="password" id="password">
             </p>
             <p>
                 <input type="submit" value="Login">
