Adiciona links para admin

--- a/teleconsultoria/templates/teleconsultoria/painel_admin.html
+++ b/teleconsultoria/templates/teleconsultoria/painel_admin.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <h1>Painel</h1>
+    <ul>
+        <li><a href="#">Gerenciar Teleconsultores</a></li>
+        <li><a href="#">Gerenciar Solicitantes</a></li>
+    </ul>
 </body>
 </html>
