Cria template para gerenciar solicitante

--- a/teleconsultoria/templates/teleconsultoria/painel_admin.html
+++ b/teleconsultoria/templates/teleconsultoria/painel_admin.html
@@ -13,7 +13,8 @@
     <ul>
         <li><a href="{% url 'gerenciar_teleconsultor_view' %}">
                 Gerenciar Teleconsultores</a></li>
-        <li><a href="#">Gerenciar Solicitantes</a></li>
+        <li><a href="{% url 'gerenciar_solicitante_view' %}">
+                Gerenciar Solicitantes</a></li>
     </ul>
 </body>
 </html>
