Finaliza cadastro de solicitante

--- a/teleconsultoria/templates/teleconsultoria/gerenciar_solicitante.html
+++ b/teleconsultoria/templates/teleconsultoria/gerenciar_solicitante.html
@@ -17,7 +17,7 @@
     {% endif %}
 
     <p>
-        <a href="#">Adicionar Solicitante</a>
+        <a href="{% url 'adicionar_solicitante_view' %}">Adicionar Solicitante</a>
     </p>
 
     <table border="1" width="100%">
