--- a/teleconsultoria/templates/teleconsultoria/login.html
+++ b/teleconsultoria/templates/teleconsultoria/login.html
@@ -2,10 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Teleconsultoria - Login</title>
+    <title>Teleconsultoria - Login Administração</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Login Administração</h1>
+
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
 
     <form action="{% url 'login_view' %}" method="POST">
         <div>
